k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: jeff-hmiskb-fe-service
  namespace: jeff-muna
spec:
  type: ClusterIP
  selector:
    app: jeff-hmiskb-fe
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
