k8s/service.frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: hmiskb-fe-service
spec:
  type: LoadBalancer
  selector:
    app: hmiskb-fe-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
