k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeff-hmiskb-ingress
  namespace: jeff-muna
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / #op
spec:
  rules:
  - host: jeff-muna.capstone.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jeff-hmiskb-fe-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: jeff-hmiskb-be-service
            port:
              number: 80
